--- a/Exercício_html/index.html
+++ b/Exercício_html/index.html
@@ -7,14 +7,16 @@
 </head>
 <body>
     <h1>Formulário de cadastro</h1>
-    <label for="nome">Nome</label>
-    <input type="text" id="nome"> <br>
-    <label for="email">E-mail</label>
-    <input type="email" id="email"> <br>
-    <label for="senha">Senha</label>
-    <input type="password" id="senha"> <br>
-    <button>
-        Cadastrar
-    </button>
-</body>
+    <form>
+        <label for="nome">Nome</label>
+        <input type="text" id="nome"> <br>
+        <label for="email">E-mail</label>
+        <input type="email" id="email"> <br>
+        <label for="senha">Senha</label>
+        <input type="password" id="senha"> <br>
+        <button type="submit">
+            Cadastrar
+        </button>
+    </form>
+    </body>
 </html>
