--- a/Exercício_CSS/index.html
+++ b/Exercício_CSS/index.html
@@ -23,7 +23,7 @@
                     <a href="#tecnology" title="Ir para a seção de tecnologia">Tecnologia</a>
                 </li>
                 <li>
-                    <a href="#cars" title="Ir para a seção de automobilísmo">Automobilísmo</a>
+                    <a href="#automob" title="Ir para a seção de automobilísmo">Automobilísmo</a>
                 </li>
             </ul>
         </nav>
